--- a/publication/mypublications.bib
+++ b/publication/mypublications.bib
@@ -466,6 +466,28 @@ pages={5326-5330},}
  year = {2020}
 }
 
+@inproceedings{bolat-hri2020-demo,
+author = {Tleubayev, Bolat and Zhexenova, Zhanel and Asselborn, Thibault and Johal, Wafa and Dillenbourg, Pierre and Sandygulova, Anara},
+title = {CoWriting Kazakh: Learning a New Script with a Robot - Demonstration},
+year = {2020},
+isbn = {9781450370578},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3371382.3378211},
+doi = {10.1145/3371382.3378211},
+abstract = {This interdisciplinary project aims to assess and manage the risks relating to the transition of Kazakh language from Cyrillic to Latin in Kazakhstan in order to address challenges of a) teaching and motivating children to learn a new script and its associated handwriting, and b) training and providing support for all demographic groups, in particular senior generation. We present the system demonstration that proposes to assist and motivate children to learn a new script with the help of a humanoid robot and a tablet with stylus.},
+booktitle = {Companion of the 2020 ACM/IEEE International Conference on Human-Robot Interaction},
+pages = {79},
+numpages = {1},
+keywords = {language learning, social robot, handwriting recognition},
+location = {Cambridge, United Kingdom},
+series = {HRI '20}
+}
+
+  
+
+
+
 
 @inproceedings{sandygulova-hri2020,
  author = {Sandygulova, Anara and Johal, Wafa and Zhexenova,Zhanel and Tleubayev, Bolat and Zhanatkyzy, Aida and  Turarova, Aizada and Telisheva, Zhansaule and
@@ -644,4 +666,14 @@ Interestingly, the robot Alter produced results significantly different than all
 The outcome of this is a distraction model related to human-likeness of robots. Our results show the impact of anthropomorphism on distracting potential and thus should be taken into account when designing robots."},
   keywords = {anthropomorphism, robot design, human-likeness, perception load},
   doi = {10.1145/3434074.3447137}
+}
+
+@article{asselborn2021transferability,
+  title={The transferability of handwriting skills: from the Cyrillic to the Latin alphabet},
+  author={Asselborn, Thibault and Johal, Wafa and Tleubayev, Bolat and Zhexenova, Zhanel and Dillenbourg, Pierre and McBride, Catherine and Sandygulova, Anara},
+  journal={NPJ science of learning},
+  volume={6},
+  number={1},
+  pages={6},
+  year={2021}
 }
