--- a/publication/mypublications.bib
+++ b/publication/mypublications.bib
@@ -1,3 +1,10 @@
+@thesis{Benkaouar2012,
+  title={Detection of non-verbal communication cues using multi-modal sensors : engagement detection },
+  author={Johal, Wafa Benkaouar},
+  year={2012}
+}
+
+
 @inproceedings{benkaouar2012multi,
   title={Multi-sensors engagement detection with a robot companion in a home environment},
   author={Benkaouar, Wafa and Vaufreydaz, Dominique},
