--- a/publication/mypublications.bib
+++ b/publication/mypublications.bib
@@ -735,4 +735,32 @@ URL={https://www.frontiersin.org/article/10.3389/frobt.2021.744526},
 DOI={10.3389/frobt.2021.744526},      	
 ISSN={2296-9144},     
 ABSTRACT={The evolving field of human-robot interaction (HRI) necessitates that we better understand how social robots operate and interact with humans. This scoping review provides an overview of about 300 research works focusing on the use of the NAO robot from 2010 to 2020. This study presents one of the most extensive and inclusive pieces of evidence on the deployment of the humanoid NAO robot and its global reach. Unlike most reviews, we provide both qualitative and quantitative results regarding how NAO is being used and what has been achieved so far. We analyzed a wide range of theoretical, empirical, and technical contributions that provide multidimensional insights, such as general trends in terms of application, the robot capabilities, its input and output modalities of communication, and the human-robot interaction experiments that featured NAO (e.g. number and roles of participants, design, and the length of interaction). Lastly, we derive from the review some research gaps in current state-of-the-art and provide suggestions for the design of the next generation of social robots.}
+
+@article{gargot2022automatic,
+  title={Automatic assessment of motor impairments in Autism Spectrum Disorders: a systematic review},
+  author={Gargot, Thomas and Archambault, Dominique and Chetouani, Mohamed and Cohen, David and Johal, Wafa and Anzalone, Salvatore Maria},
+  journal={Cognitive Computation},
+  pages={1--36},
+  year={2022},
+  publisher={Springer US}
+}
+
+@inproceedings{liu2021speech,
+  title={Speech-based Gesture Generation for Robots and Embodied Agents: A Scoping Review},
+  author={Liu, Yu and Mohammadi, Gelareh and Song, Yang and Johal, Wafa},
+  booktitle={Proceedings of the 9th International Conference on Human-Agent Interaction},
+  pages={31--38},
+  year={2021}
+}
+
+@article{olsen2022leveraging,
+  title={Leveraging eye tracking to understand children’s attention during game-based, tangible robotics activities},
+  author={Olsen, Jennifer K and Ozgur, Arzu Guneysu and Sharma, Kshitij and Johal, Wafa},
+  journal={International Journal of Child-Computer Interaction},
+  volume={31},
+  pages={100447},
+  year={2022},
+  publisher={Elsevier}
+}
+
 }
